src/test/ui/error-codes/E0499.stderr
error[E0499]: cannot borrow `i` as mutable more than once at a time
  --> $DIR/E0499.rs:4:22
   |
LL |     let mut x = &mut i;
   |                      - first mutable borrow occurs here
LL |     let mut a = &mut i; //~ ERROR E0499
   |                      ^ second mutable borrow occurs here
...
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
